cicd/gitlab-ci/gitlab-runner/gitlab-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    name: gitlab
spec:
  rules:
  - host: gitlab.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 80
  - host: gitlab-ssh.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 1022
